Sidebar button z-index increase on mobile, fix for select not being reset on Form Reset.

--- a/components/Select/Select.css
+++ b/components/Select/Select.css
@@ -148,7 +148,7 @@
     }
 
     .selectIcon{
-        width: 70px;
+        width: 100px;
     }
 }
 
@@ -178,6 +178,6 @@
     }
 
     .selectIcon{
-        width: 40px;
+        width: 100px;
     }
 }
